--- a/PM-1.1.14-1.1/Makefile
+++ b/PM-1.1.14-1.1/Makefile
@@ -2,6 +2,8 @@
 #
 #
 
+SRCFILE=PM-1.1.14-1.1.txt
+
 # make sure that you have correctly configured ~/.blogpost
 BLOGPOST=blogpost.py
 BLOGPOST_OPTS=--force -u --proxy=172.19.0.3:8080
@@ -9,7 +11,6 @@ BLOGPOST_OPTS=--force -u --proxy=172.19.0.3:8080
 
 ASCIIDOC_OPTS=-a toc -a icons -a iconsdir=/images/icons -a numbered
 
-SRCFILE=PM-1.1.14-1.1.txt
 
 all:
 	@echo make html
@@ -21,3 +22,4 @@ html:
 post:
 	$(BLOGPOST) $(BLOGPOST_OPTS) $(ASCIIDOC_OPTS) post $(SRCFILE)
 #	$(BLOGPOST) $(BLOGPOST_OPTS) --asciidoc-opt="$(ASCIIDOC_OPTS)" post $(SRCFILE)
+	@echo "Make sure to update the category on Wordpress since it's erased"
