--- a/Trac2653-IPaddr2/Makefile
+++ b/Trac2653-IPaddr2/Makefile
@@ -2,10 +2,12 @@
 #
 #
 
+PROXY ?= $(shell echo ${http_proxy} | cut -d '/' -f 3 )
+
 # make sure that you have correctly configured ~/.blogpost
 BLOGPOST=blogpost.py
-#BLOGPOST_OPTS=-u --proxy=172.19.0.3:8080
-BLOGPOST_OPTS=--force -U --proxy=172.19.0.3:8080
+#BLOGPOST_OPTS=-u --proxy=$(PROXY)
+BLOGPOST_OPTS=--force -U --proxy=$(PROXY)
 
 ASCIIDOC_OPTS=-a toc -a icons -a iconsdir=/images/icons -a numbered
 
